--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,42 @@
-<h1> Eat-Da-Burger! </h1>
+<div class="container">
+    <h1> Eat-Da-Burger! </h1>
+
+    <img src="../assets/img/burger_cat.jpg" alt="cat burger">
+
+<div class="unDevoured"></div>
+    <ul> 
+    {{#each burgers}}
+        {{#unless this.devoured}}
+            <li>{{burger_name}}</li>
+                <button class="devour-state" data-id="{{id}}" data-newDevoured="{{finished}}" type="submit">Finish Him!
+                    {{#if finished}}Finish!{{/if}}
+                </button>
+        {{/unless}} 
+    {{/each}}
+    </ul>
+</div>
+
+<div class="devoured"></div>
+    <ul> 
+    {{#each burgers}}
+        {{#if devoured}}
+            <li>{{burger_name}}</li>
+        {{/if}}
+    {{/each}}
+    </ul>
+</div>
 
 
 
+<div class="addBurger">
+    <h2>Add a Burger</h2>
+        <form class="create-form" action="/api/burgers" method="POST">
+
+            <div class="form-group">
+                <label for="ca">Burger Name:</label>
+                <input type="text" id="burgerSubmit" name="burger_name">
+            </div>
+                <br>
+    <button type="submit">Add a Burger, by clicking on "Submit"!</button>
+        </form>
+</div>
