--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eat-Da-Burger!</title>
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
     <script src = "https://code.jquery.com/jquery.js"></script>
-    <script src = "/public/assets/js/burger.js"></script>
+    <script src = "/assets/js/burger.js"></script>
 </head>
 <body>
     {{{ body }}}
