--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,4 +1,11 @@
 body {
-    background: dodgerblue;
-    
+    background: dodgerblue; 
+}
+
+.container {
+    align-content: center;
+}
+
+.class {
+    size: 18px;
 }
