--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,39 @@
 <div class="container">
     <h1> Eat-Da-Burger! </h1>
 
-    <img src="../assets/img/burger_cat.jpg" alt="cat burger">
+    <img src="../assets/img/burger_cat.png" alt="cat burger">
 
-<div class="unDevoured"></div>
-    <ul> 
-    {{#each burgers}}
-        {{#unless this.devoured}}
-            <li>{{burger_name}}</li>
-                <button class="devour-state" data-id="{{id}}" data-newDevoured="{{finished}}" type="submit">Finish Him!
-                    {{#if finished}}Finish!{{/if}}
-                </button>
-        {{/unless}} 
-    {{/each}}
+<div class="unDevoured">
+    <ul>
+    <div class="card">
+        <div class="card-body">     
+            {{#each burgers}}
+                {{#unless this.devoured}}
+                    <li>{{burger_name}}</li>
+                        <button class="devour-state btn btn-danger" data-id="{{id}}" data-newDevoured="{{finished}}" type="submit">Finish Him!
+                            {{#if finished}}Finish!{{/if}}
+                        </button>
+                {{/unless}} 
+            {{/each}}
+        </div>
+    </div>
     </ul>
 </div>
 
-<div class="devoured"></div>
-    <ul> 
-    {{#each burgers}}
-        {{#if devoured}}
-            <li>{{burger_name}}</li>
-        {{/if}}
-    {{/each}}
+<div class="devoured">
+    <ul>
+        <div class="card">
+            <div class="card-body"> 
+                {{#each burgers}}
+                    {{#if devoured}}
+                        <li>{{burger_name}}</li>
+                    {{/if}}
+                {{/each}}
+            </div>
+        </div>
     </ul>
 </div>
+
 
 
 
@@ -37,6 +46,8 @@
                 <input type="text" id="burgerSubmit" name="burger_name">
             </div>
                 <br>
-    <button type="submit">Add a Burger, by clicking on "Submit"!</button>
+    <button type="submit" class="btn btn-secondary">Submit</button>
+    <p>Add a Burger, by clicking on "Submit"!</p>
         </form>
+</div>
 </div>
