--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,10 @@
     <script src = "/assets/js/burger.js"></script>
 </head>
 <body>
+    <h1> Eat-Da-Burger! </h1>
+
+    <img src="../assets/img/burger_cat.png" id="cat-burger" alt="cat burger">
+
     {{{ body }}}
 </body>
 </html>
